# diffgrf

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: anisotropy.py  inverse.py  quickstart.py
src/diffgrf/: __init__.py  core.py
tests/: test_anisotropy.py  test_devices.py  test_dimensions.py  test_gradients.py  test_kernels.py  test_mesh.py  test_rotation.py
